--- a/src/Components/Home/PollData/PollData.scss
+++ b/src/Components/Home/PollData/PollData.scss
@@ -11,6 +11,7 @@
     align-items: left;
     justify-content: flex-start;
     gap: 3rem;
+    width: 100%;
   }
   .poll-header {
     width: 100%;
@@ -33,7 +34,7 @@
     }
   }
   label {
-    text-decoration: underline;
+    font-size: 1.5rem;
   }
   mark {
     font-size: 1.5rem;
@@ -41,8 +42,8 @@
     background-color: red;
 
     /* Create the gradient. */
-    background-image: linear-gradient(45deg, #a537ff, #ff0000);
-
+    background-image: linear-gradient(45deg, #a537ff, #ff3a3a);
+    font-weight: bold;
     /* Set the background size and repeat properties. */
     background-size: 100%;
     background-repeat: repeat;
@@ -57,12 +58,13 @@
   .questions-container {
     width: 100%;
     display: flex;
-    align-items: left;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 1rem;
+    
     .question {
-      width: 50rem;
+      width: 35rem;
       min-height: 10rem;
       font-size: 1.1rem;
       .line {
@@ -85,12 +87,23 @@
     border: none;
     width: 10rem;
     height: 3rem;
-    border-radius: 5px;
+    border-radius: 25px;
     box-shadow: 3px 5px 10px #000000;
     background-image: linear-gradient(to right, #a537ff, #ff0000);
     color: white;
     font-weight: 900;
     transition: all 0.3s ease-in-out;
+    display: flex;
+    gap: 1rem;
+    align-items: baseline;
+    justify-content: center;
+    text-align: center;
+    p{
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+    cursor: pointer;
     &:hover {
       transform: scale(1.2);
     }
